2017-03-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3347: jstack.stp should support AArch64
	Patch by Andrew Dinn <adinn@redhat.com>
	and Mark Wielaard <mjw@redhat.com>
	* AUTHORS: Add Andrew Dinn.
	* NEWS: Updated.
	* tapset/jstack.stp.in:
	Add AArch64 support.

2017-04-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS:
	Add 2.6.9 release notes.

2017-01-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3318: Replace 'infinality' with
	'improved font rendering'
	* INSTALL:
	Rename --enable-infinality to
	--enable-improved-font-rendering, as
	the code no longer relies on the infinality
	patch set.
	* Makefile.am:
	Use ENABLE_IMPROVED_FONT_RENDERING, not
	ENABLE_INFINALITY.
	* acinclude.m4:
	(IT_ENABLE_IMPROVED_FONT_RENDERING): Renamed
	from IT_ENABLE_INFINALITY. Fix variables to match
	and remove unneeded test for infinality patches.
	* configure.ac:
	Invoke IT_ENABLE_IMPROVED_FONT_RENDERING instead
	of IT_ENABLE_INFINALITY.

2017-02-05  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	Bump to icedtea-2.7.0pre09.
	* patches/pr3209-backout.patch,
	* patches/pr3211.patch:
	Remove upstreamed patches.
	(CORBA_CHANGESET): Update to icedtea-2.7.0pre09.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	(ICEDTEA_PATCHES): Remove PR3211 patch
	and PR3209 backout now applied upstream.
	(ICEDTEA_ENV): Update INFINALITY_SUPPORT
	setting to IMPROVED_FONT_RENDERING,
	following PR3318.
	* NEWS: Updated.
	* configure.ac: Bump to 2.7.0pre09.
	* hotspot.map.in: Update to icedtea-2.7.0pre09.

2016-11-13  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add 2.6.8 release notes.

2016-08-10  Tiago Stuermer Daitx  <tdaitx@gmail.com>
