@@ -41,6 +41,7 @@ Bernhard Rosenkränzer <bero@arklinux.org>
 Marc Schoenefeld <mschoene@redhat.com>
 Keith Seitz <keiths@redhat.com>
 Ralph Sennhauser <sera@gentoo.org>
+David Smith <dsmith@redhat.com>
 Joshua Sumali <jsumali@redhat.com>
 Pavel Tisnovsky <ptisnovs@redhat.com>
 Christian Thalinger <twisti@complang.tuwien.ac.at>
